feat: prep for hp vs random with med and low with min 100 issuse per repo

--- a/priority/high_quality_dataset/create_dataset/04_upload_to_huggingface.ipynb
+++ b/priority/high_quality_dataset/create_dataset/04_upload_to_huggingface.ipynb
@@ -56,31 +56,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>tools mode layout issuesdescribe the bug some ...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>helium network hnt cryptocoin iconlogo before ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>version control enhancement for osimagephase 2...</td>\n",
+       "      <td>schuurshoeijmakers syndromemondo term id and l...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>actor future is immediately completed if the a...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>incompleteness disjoint types this issue was c...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>pub should more efficiently serialize barback ...</td>\n",
+       "      <td>reqmgr2 acdc creation via webpage naming needs...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>hu editor hu status different in grid view sin...</td>\n",
+       "      <td>writing a literal string to the record io chan...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -90,55 +90,55 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>116797</th>\n",
-       "      <td>116797</td>\n",
-       "      <td>qgis 310 ltr 316 not connecting to odbc source...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116798</th>\n",
-       "      <td>116798</td>\n",
-       "      <td>active theme is not foundhello every 15 second...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116799</th>\n",
-       "      <td>116799</td>\n",
-       "      <td>crash at usedproduct report creation scenario ...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116800</th>\n",
-       "      <td>116800</td>\n",
-       "      <td>optimization api 在线文档在生产环境隐藏加权限 permissionclas...</td>\n",
+       "      <th>116747</th>\n",
+       "      <td>116747</td>\n",
+       "      <td>multiple themes spacer block crashes quick sum...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>116801</th>\n",
-       "      <td>116801</td>\n",
-       "      <td>zoey webbfirecage as an animal survivedbasical...</td>\n",
+       "      <th>116748</th>\n",
+       "      <td>116748</td>\n",
+       "      <td>corescript strand of the ancients ship bug 15d...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116749</th>\n",
+       "      <td>116749</td>\n",
+       "      <td>sqs name of missing queue is not reported on a...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116750</th>\n",
+       "      <td>116750</td>\n",
+       "      <td>net stats many received tcp packets count as d...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116751</th>\n",
+       "      <td>116751</td>\n",
+       "      <td>add project path into syspathi add mylibrarymy...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>116802 rows × 3 columns</p>\n",
+       "<p>116752 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        Unnamed: 0                                         text_clean  label\n",
-       "0                0  tools mode layout issuesdescribe the bug some ...      0\n",
-       "1                1  version control enhancement for osimagephase 2...      0\n",
-       "2                2  actor future is immediately completed if the a...      1\n",
-       "3                3  pub should more efficiently serialize barback ...      0\n",
-       "4                4  hu editor hu status different in grid view sin...      1\n",
+       "0                0  helium network hnt cryptocoin iconlogo before ...      1\n",
+       "1                1  schuurshoeijmakers syndromemondo term id and l...      0\n",
+       "2                2  incompleteness disjoint types this issue was c...      0\n",
+       "3                3  reqmgr2 acdc creation via webpage naming needs...      0\n",
+       "4                4  writing a literal string to the record io chan...      1\n",
        "...            ...                                                ...    ...\n",
-       "116797      116797  qgis 310 ltr 316 not connecting to odbc source...      1\n",
-       "116798      116798  active theme is not foundhello every 15 second...      1\n",
-       "116799      116799  crash at usedproduct report creation scenario ...      1\n",
-       "116800      116800  optimization api 在线文档在生产环境隐藏加权限 permissionclas...      0\n",
-       "116801      116801  zoey webbfirecage as an animal survivedbasical...      1\n",
+       "116747      116747  multiple themes spacer block crashes quick sum...      0\n",
+       "116748      116748  corescript strand of the ancients ship bug 15d...      0\n",
+       "116749      116749  sqs name of missing queue is not reported on a...      1\n",
+       "116750      116750  net stats many received tcp packets count as d...      1\n",
+       "116751      116751  add project path into syspathi add mylibrarymy...      1\n",
        "\n",
-       "[116802 rows x 3 columns]"
+       "[116752 rows x 3 columns]"
       ]
      },
      "execution_count": 2,
@@ -147,7 +147,7 @@
     }
    ],
    "source": [
-    "name = \"high_vs_random\"\n",
+    "name = \"high_vs_random_with_med_low\"\n",
     "file_name = f\"csv/clean_{name}.csv\"\n",
     "df = pd.read_csv(file_name)\n",
     "df"
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -188,12 +188,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>58401</td>\n",
+       "      <th>1</th>\n",
+       "      <td>58376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>58401</td>\n",
+       "      <th>0</th>\n",
+       "      <td>58376</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -202,11 +202,11 @@
       "text/plain": [
        "       count\n",
        "label       \n",
-       "0      58401\n",
-       "1      58401"
+       "1      58376\n",
+       "0      58376"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -267,20 +267,20 @@
        "DatasetDict({\n",
        "    test: Dataset({\n",
        "        features: ['Unnamed: 0', 'text_clean', 'label', '__index_level_0__'],\n",
-       "        num_rows: 11681\n",
+       "        num_rows: 11676\n",
        "    })\n",
        "    train: Dataset({\n",
        "        features: ['Unnamed: 0', 'text_clean', 'label', '__index_level_0__'],\n",
-       "        num_rows: 93441\n",
+       "        num_rows: 93401\n",
        "    })\n",
        "    validate: Dataset({\n",
        "        features: ['Unnamed: 0', 'text_clean', 'label', '__index_level_0__'],\n",
-       "        num_rows: 11680\n",
+       "        num_rows: 11675\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,13 +312,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2386b72d6838463687e1b42f1d32908d",
+       "model_id": "96e113cabef14aacaeda09146881f150",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,7 +332,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46bd94e9b08e4e66b5f647962da744a2",
+       "model_id": "dbba519d1b2e4f3282f54a321491c201",
        "version_major": 2,
        "version_minor": 0
       },
@@ -346,7 +346,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13e6c553d6624f4583afcb2b2ae61589",
+       "model_id": "3c3c807e22fa4513a895c790921cadb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -360,7 +360,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e67e7bf10a74ad2b710bb8781debb02",
+       "model_id": "654e854b7e9642e3a87493f984d4b7f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,7 +374,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38f81de4e5af415f9d66291a53d64879",
+       "model_id": "bc9a8f75f77746ad8ff01533babf6f39",
        "version_major": 2,
        "version_minor": 0
       },
@@ -388,7 +388,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "565df44f04f849799818899fd2225c80",
+       "model_id": "aeff2c6c7b614e4884a974d8ccbbcac4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -402,7 +402,7 @@
    ],
    "source": [
     "# Push to Hugging Face Hub\n",
-    "ds.push_to_hub(name+\"min_100_issues_per_repo\")"
+    "ds.push_to_hub(name+\"_min_100_issues_per_repo\")"
    ]
   }
  ],
