fix: removed null from dataset

--- a/priority/hp_vs_nhp/04_upload_to_huggingface.ipynb
+++ b/priority/hp_vs_nhp/04_upload_to_huggingface.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -54,27 +54,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>flight bypass in the void it is possible to fl...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>to add link about browser support of copy comm...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>inside syntax highlighting is confusing descri...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>improve properties of tasks definition files a...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>googlemobile doesnt like homecfm and its high ...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>bug exporting obj only uses one material gantt...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>signup dynamically validate username and site ...</td>\n",
+       "      <td>items with a single result in error weapon poi...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>adding usc users to the group name martin aude...</td>\n",
+       "      <td>cards that are put into shadows with assault f...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -83,59 +83,59 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>430495</th>\n",
-       "      <td>bug with models with more than variables hi al...</td>\n",
+       "      <th>430621</th>\n",
+       "      <td>move resources blog post links and video from ...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>430496</th>\n",
-       "      <td>bug error in manager portal description a clea...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>430497</th>\n",
-       "      <td>navigation menu title loginlogout profile</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>430498</th>\n",
-       "      <td>uri is not absolute error when calling filerea...</td>\n",
+       "      <th>430622</th>\n",
+       "      <td>requisition line comments describe the bug req...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>430499</th>\n",
-       "      <td>when initializing a command with features disa...</td>\n",
+       "      <th>430623</th>\n",
+       "      <td>have bug in create in seeds describe the bug h...</td>\n",
        "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430624</th>\n",
+       "      <td>log in notifications</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430625</th>\n",
+       "      <td>announce launch of honeycomb airdrop as a poly...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>430500 rows × 2 columns</p>\n",
+       "<p>430626 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                               text_clean  label\n",
-       "0       flight bypass in the void it is possible to fl...      1\n",
-       "1       inside syntax highlighting is confusing descri...      1\n",
-       "2       googlemobile doesnt like homecfm and its high ...      1\n",
-       "3       signup dynamically validate username and site ...      1\n",
-       "4       adding usc users to the group name martin aude...      0\n",
+       "0       to add link about browser support of copy comm...      0\n",
+       "1       improve properties of tasks definition files a...      0\n",
+       "2       bug exporting obj only uses one material gantt...      0\n",
+       "3       items with a single result in error weapon poi...      1\n",
+       "4       cards that are put into shadows with assault f...      0\n",
        "...                                                   ...    ...\n",
-       "430495  bug with models with more than variables hi al...      0\n",
-       "430496  bug error in manager portal description a clea...      0\n",
-       "430497          navigation menu title loginlogout profile      0\n",
-       "430498  uri is not absolute error when calling filerea...      1\n",
-       "430499  when initializing a command with features disa...      0\n",
+       "430621  move resources blog post links and video from ...      0\n",
+       "430622  requisition line comments describe the bug req...      1\n",
+       "430623  have bug in create in seeds describe the bug h...      0\n",
+       "430624                               log in notifications      0\n",
+       "430625  announce launch of honeycomb airdrop as a poly...      1\n",
        "\n",
-       "[430500 rows x 2 columns]"
+       "[430626 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name = \"high_vs_non_high\"\n",
+    "name = \"high_vs_non_high_priority\"\n",
     "file_name = f\"csv/clean_{name}.csv\"\n",
     "df = pd.read_csv(file_name)\n",
     "df"
@@ -143,7 +143,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text_clean</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3129</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3531</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5819</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6645</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7862</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416671</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>418696</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>426919</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>427334</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>427862</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>339 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       text_clean  label\n",
+       "3129          NaN      0\n",
+       "3531          NaN      0\n",
+       "5819          NaN      0\n",
+       "6645          NaN      0\n",
+       "7862          NaN      0\n",
+       "...           ...    ...\n",
+       "416671        NaN      0\n",
+       "418696        NaN      0\n",
+       "426919        NaN      0\n",
+       "427334        NaN      0\n",
+       "427862        NaN      0\n",
+       "\n",
+       "[339 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_rows = df[df['text_clean'].isnull()]\n",
+    "null_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text_clean</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>to add link about browser support of copy comm...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>improve properties of tasks definition files a...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>bug exporting obj only uses one material gantt...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>items with a single result in error weapon poi...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cards that are put into shadows with assault f...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430282</th>\n",
+       "      <td>move resources blog post links and video from ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430283</th>\n",
+       "      <td>requisition line comments describe the bug req...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430284</th>\n",
+       "      <td>have bug in create in seeds describe the bug h...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430285</th>\n",
+       "      <td>log in notifications</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430286</th>\n",
+       "      <td>announce launch of honeycomb airdrop as a poly...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>430287 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               text_clean  label\n",
+       "0       to add link about browser support of copy comm...      0\n",
+       "1       improve properties of tasks definition files a...      0\n",
+       "2       bug exporting obj only uses one material gantt...      0\n",
+       "3       items with a single result in error weapon poi...      1\n",
+       "4       cards that are put into shadows with assault f...      0\n",
+       "...                                                   ...    ...\n",
+       "430282  move resources blog post links and video from ...      0\n",
+       "430283  requisition line comments describe the bug req...      1\n",
+       "430284  have bug in create in seeds describe the bug h...      0\n",
+       "430285                               log in notifications      0\n",
+       "430286  announce launch of honeycomb airdrop as a poly...      1\n",
+       "\n",
+       "[430287 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.dropna(subset=['text_clean'])\n",
+    "# reset index\n",
+    "df = df.reset_index(drop=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text_clean</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [text_clean, label]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_rows = df[df['text_clean'].isnull()]\n",
+    "null_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -177,11 +466,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>215250</td>\n",
+       "      <td>215310</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>215250</td>\n",
+       "      <td>214977</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -190,11 +479,11 @@
       "text/plain": [
        "        count\n",
        "label        \n",
-       "1      215250\n",
-       "0      215250"
+       "1      215310\n",
+       "0      214977"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -255,20 +544,20 @@
        "DatasetDict({\n",
        "    test: Dataset({\n",
        "        features: ['text_clean', 'label', '__index_level_0__'],\n",
-       "        num_rows: 43050\n",
+       "        num_rows: 43030\n",
        "    })\n",
        "    train: Dataset({\n",
        "        features: ['text_clean', 'label', '__index_level_0__'],\n",
-       "        num_rows: 344400\n",
+       "        num_rows: 344229\n",
        "    })\n",
        "    validate: Dataset({\n",
        "        features: ['text_clean', 'label', '__index_level_0__'],\n",
-       "        num_rows: 43050\n",
+       "        num_rows: 43028\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,13 +589,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3693e29292a549ef8d80a821223ea68f",
+       "model_id": "ae5f6b3f88a84b87abfff4e24be7e669",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,7 +609,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3eb8a9c02244c648fe3be22e61c3fab",
+       "model_id": "06b388235aae487d8a48b911005f2308",
        "version_major": 2,
        "version_minor": 0
       },
@@ -334,7 +623,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6dd9649d61b425f85498a185cfa6df9",
+       "model_id": "be1a82f384464848ac7881fda4c932e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -348,7 +637,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "078cd519e8b347428fe2907c6d9e58c4",
+       "model_id": "ce95d441722944dbb9e478136e0a676c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -362,7 +651,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d31a69b97c6342538321d3b196cad10d",
+       "model_id": "7da44cf53e1c4d2d9ad7a4bc165c3ba1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -376,7 +665,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe2ce2efd95d46e98215c40fdc21dbad",
+       "model_id": "013032aa7010430e8fd82d56773cf16e",
        "version_major": 2,
        "version_minor": 0
       },
