--- a/priority/hp_vs_nhp/create_testsets/04_upload_to_huggingface.ipynb
+++ b/priority/hp_vs_nhp/create_testsets/04_upload_to_huggingface.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -54,28 +54,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>some errors are silencedi need some help in fi...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>flutter not rendering text after sitting idle ...</td>\n",
+       "      <td>error code misc and build errors it probably s...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>no error when setter has too many arguments py...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>windows frameworktestslibraries is flaky metat...</td>\n",
+       "      <td>warn about always truefalse isinstance tests t...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>reverse listview scrolls to bottom when tappin...</td>\n",
+       "      <td>several crashes on pyright test suite the cras...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>iconbutton doc link point to the wrong website...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>assert file not in selfflushedfiles without my...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -83,59 +83,59 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2367</th>\n",
-       "      <td>we should crash if you both enableimpeller and...</td>\n",
+       "      <th>729</th>\n",
+       "      <td>segfault on recursive type im running mypy on ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2368</th>\n",
-       "      <td>tree closed on infra failuresfor example</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2369</th>\n",
-       "      <td>temporarily disable windows tests try and prod...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2370</th>\n",
-       "      <td>linux routingtest infra failurei cant tell wha...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2371</th>\n",
-       "      <td>cupertinotabbar change tab index programatical...</td>\n",
+       "      <th>730</th>\n",
+       "      <td>plugin use mypy to enrich ast with types with ...</td>\n",
        "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>731</th>\n",
+       "      <td>give better error messages when calling overlo...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732</th>\n",
+       "      <td>incompatible assignment using typeddict in gen...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>733</th>\n",
+       "      <td>support indexing and iterating enum type objec...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2372 rows × 2 columns</p>\n",
+       "<p>734 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             text_clean  label\n",
-       "0     some errors are silencedi need some help in fi...      0\n",
-       "1     flutter not rendering text after sitting idle ...      1\n",
-       "2     windows frameworktestslibraries is flaky metat...      1\n",
-       "3     reverse listview scrolls to bottom when tappin...      0\n",
-       "4     iconbutton doc link point to the wrong website...      0\n",
-       "...                                                 ...    ...\n",
-       "2367  we should crash if you both enableimpeller and...      1\n",
-       "2368           tree closed on infra failuresfor example      1\n",
-       "2369  temporarily disable windows tests try and prod...      1\n",
-       "2370  linux routingtest infra failurei cant tell wha...      1\n",
-       "2371  cupertinotabbar change tab index programatical...      0\n",
+       "                                            text_clean  label\n",
+       "0    error code misc and build errors it probably s...      1\n",
+       "1    no error when setter has too many arguments py...      0\n",
+       "2    warn about always truefalse isinstance tests t...      1\n",
+       "3    several crashes on pyright test suite the cras...      0\n",
+       "4    assert file not in selfflushedfiles without my...      1\n",
+       "..                                                 ...    ...\n",
+       "729  segfault on recursive type im running mypy on ...      1\n",
+       "730  plugin use mypy to enrich ast with types with ...      0\n",
+       "731  give better error messages when calling overlo...      1\n",
+       "732  incompatible assignment using typeddict in gen...      0\n",
+       "733  support indexing and iterating enum type objec...      1\n",
        "\n",
-       "[2372 rows x 2 columns]"
+       "[734 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name = \"flutter_testset\"\n",
+    "name = \"mypy_testset\"\n",
     "file_name = f\"csv/clean_{name}.csv\"\n",
     "df = pd.read_csv(file_name)\n",
     "df"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -176,12 +176,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1186</td>\n",
+       "      <th>1</th>\n",
+       "      <td>367</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1186</td>\n",
+       "      <th>0</th>\n",
+       "      <td>367</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -190,11 +190,11 @@
       "text/plain": [
        "       count\n",
        "label       \n",
-       "0       1186\n",
-       "1       1186"
+       "1        367\n",
+       "0        367"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -216,12 +216,12 @@
        "DatasetDict({\n",
        "    test: Dataset({\n",
        "        features: ['text_clean', 'label'],\n",
-       "        num_rows: 2372\n",
+       "        num_rows: 734\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,13 +251,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77fadf55b5c74ca3a7697b34fa85fe01",
+       "model_id": "151799dd09d94167b40ece82263c001f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,12 +271,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e153dd99dba42dcb860b3ea86a518f5",
+       "model_id": "8c0ca3a260bd4bcdaa0989c05623d2ab",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/3 [00:00<?, ?ba/s]"
+       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
       ]
      },
      "metadata": {},
@@ -285,7 +285,7 @@
    ],
    "source": [
     "# Push to Hugging Face Hub\n",
-    "ds.push_to_hub(name+\"_with_med_low\")"
+    "ds.push_to_hub(name+\"_with_med_low_1\")"
    ]
   }
  ],
