feat: clean the jira priority dataset

--- a/jira/dataset_creation/Jira_dataset/04_merge_priority_dataset.ipynb
+++ b/jira/dataset_creation/Jira_dataset/04_merge_priority_dataset.ipynb
@@ -1,14 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Map priority levels into a class for each.\n",
+    "This notebook will map each different priority levels in a common class.\n",
+    "The project with 5 different priority levels are selected."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "# Import dataset from csv file\n",
-    "df = pd.read_csv(f'all_projects.csv')\n"
+    "df = pd.read_csv(f'all_projects.csv')"
    ]
   },
   {
@@ -3136,7 +3145,6 @@
     "    try:\n",
     "        df = pd.read_csv(f'{level}/{level}.csv')\n",
     "        print(f\"Read {level}.csv\")\n",
-    "        print(df.head(5))\n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred while reading {level}.csv: {str(e)}\")\n"
    ]
